--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~13.0.0",
     "date-fns": "^2.28.0",
     "rxjs": "~7.4.0",
+    "swiper": "^8.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
