--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "date-fns": "^2.28.0",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.4.0",
     "swiper": "^8.0.7",
     "tslib": "^2.3.0",
@@ -35,6 +36,7 @@
     "@angular-eslint/template-parser": "13.1.0",
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.11.0",
